# printf-project

./: CMakeLists.txt  README.md  _printf.c  _printf.h  append_hexa_code.c  append_hexa_code.h  betty_check_dir.sh  betty_style.sh  convert.c  convert.h  get_flags.c  get_flags.h  get_precision.c  get_precision.h  get_size.c  get_size.h  get_width.c  get_width.h  handle_print.c  handle_print.h  handle_write_char.c  handle_write_char.h  is_digit.c  is_digit.h  is_printable.c  is_printable.h  main.c  main.h  print_binary.c  print_binary.h  print_buffer.c  print_buffer.h  print_char.c  print_char.h  print_hexa.c  print_hexa.h  print_hexa_upper.c  print_hexa_upper.h  print_hexadecimal.c  print_hexadecimal.h  (+26 more)
