cmake_minimum_required(VERSION 3.27)
project(printf C)

set(CMAKE_C_STANDARD 99)

add_executable(printf
		_printf.c
		_printf.h
		main.c
		main.h
		get_flags.c
		get_flags.h
		get_precision.c
		get_precision.h
		get_size.c
		get_size.h
		get_width.c
		get_width.h
		is_digit.c
		is_digit.h
		print_buffer.c
		print_buffer.h
		handle_print.c
		handle_print.h
		append_hexa_code.c
		append_hexa_code.h
		convert.c
		convert.h
		is_printable.c
		is_printable.h
		print_binary.c
		print_binary.h
		print_char.c
		print_char.h
		handle_write_char.c
		handle_write_char.h
		print_hexa.c
		print_hexa.h
		write_unsigned.c
		write_unsigned.h
		print_hexadecimal.c
		print_hexadecimal.h
		print_int.c
		print_int.h
		write_string.c
		write_string.h
		write_number.c
		write_number.h
		write_pointer.c
		write_pointer.h
		print_hexa_upper.c
		print_hexa_upper.h
		print_unsigned.c
		print_unsigned.h
		print_string.c
		print_string.h
		print_percent.c
		print_percent.h
		print_octal.c
		print_octal.h
		print_pointer.c
		print_pointer.h
		print_reverse.c
		print_reverse.h
		print_rot13string.c
		print_rot13string.h
		print_non_printable.c
		print_non_printable.h)
